force-app/main/default/objects/chttrunfollow__UnfollowQueue__c/chttrunfollow__UnfollowQueue__c.object-meta.xml
<CustomObject>
    <description>EDIT AT YOUR OWN RISK.

This object stores all records that are scheduled to be unfollowed in a future date.  Editing any records may break the application.</description>
    <label>Chatter Unfollow Delayed RecordId</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Chatter Unfollow Delayed RecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Delayed RecordId</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>