force-app/main/default/objects/chttrunfollow__UnfollowQueue__c/fields/chttrunfollow__CriteriaMetDate__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__CriteriaMetDate__c</fullName>
    <description>This is the date that the record was queued up for unfollowing.  It is equal to the LastUpdatedDate of the record to ensure a clean value for most cases.</description>
    <label>CriteriaMetDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>