force-app/main/default/objects/chttrunfollow__UnfollowQueue__c/fields/chttrunfollow__DaysDelay__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__DaysDelay__c</fullName>
    <description>This is the number of days after the criteriaMetDate when all followers will be removed from the recordId specified</description>
    <label>DaysDelay</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>