force-app/main/default/objects/chttrunfollow__UnfollowQueue__c/fields/chttrunfollow__recordId__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__recordId__c</fullName>
    <description>Id of the record to be unfollowed at a later date</description>
    <label>recordId</label>
    <length>19</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>