force-app/main/default/objects/chttrunfollow__UnfollowQueue__c/listViews/chttrunfollow__All.listView-meta.xml
<ListView>
    <fullName>chttrunfollow__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>chttrunfollow__recordId__c</columns>
    <columns>chttrunfollow__CriteriaMetDate__c</columns>
    <columns>chttrunfollow__ScheduledUnfollowDate__c</columns>
    <columns>chttrunfollow__DaysDelay__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>